adding second page

--- a/firstChoice.html
+++ b/firstChoice.html
@@ -6,16 +6,19 @@
     <title>Title</title>
 </head>
 <body>
-    <a href="uploadPage.html">
-        <div class="upload">
-            <h1>Upload</h1>
-        </div>
-    </a>
-   <a href="ratePage.html">
-        <div class="estimate">
-            <h1>Rate</h1>
-        </div>
-   </a>
-
+  <div class="wallpaper-first-choice">
+    <div class="half1">
+      <div class="tan1"> </div>
+          <a href="uploadPage.html">
+              <button class="upload"><h1>Upload two photos</h1></button>
+          </a>
+    </div>
+      <div class="half2">
+        <div class="tan2"> </div>
+            <a href="ratePage.html">
+                <button class="rate"><h1>Rate photos</h1></button>
+            </a>
+      </div>
+    </div>
 </body>
 </html>
