--- a/homepage.html
+++ b/homepage.html
@@ -7,6 +7,7 @@
 </head>
 <body>
       <div class="main-picture">
+          <div class="logo"></div>
           <div class="background-for-pic" ></div>
           <div class="tan"></div>
           <div>
