finishing second page

--- a/firstChoice.html
+++ b/firstChoice.html
@@ -20,5 +20,20 @@
             </a>
       </div>
     </div>
+   <div class="footer">
+       <div class="publish-two-photos">
+           <h1>Publish two photos</h1>
+           <div class="publish-details">
+               You can Publish two photos of some things, if you cant choose one of them.
+                   people will rate them and in some time u will get results.
+           </div>
+       </div>
+       <div class="rate-photos">
+           <h1>Rate photos</h1>
+           <div class="rate-details">
+               You can rate photos of others, therefore helping them to make a right decision
+           </div>
+       </div>
+   </div>
 </body>
 </html>
