--- a/homepage.html
+++ b/homepage.html
@@ -27,7 +27,7 @@
          <div class="publish">
              <p>Publish your photos</p>
              <div class="publish-details">You can Publish photos of your things, if you cant choose one of them.
-             speople will rate it and in some time u will get a result.</div>
+             people will rate it and in some time u will get a result.</div>
          </div>
          <div class="rate">
              <p>Rate other photos</p>
