finised second page

--- a/firstChoice.html
+++ b/firstChoice.html
@@ -21,12 +21,16 @@
       </div>
     </div>
    <div class="footer">
+       <div class="footertan">
+       </div>
        <div class="publish-two-photos">
            <h1>Publish two photos</h1>
            <div class="publish-details">
                You can Publish two photos of some things, if you cant choose one of them.
                    people will rate them and in some time u will get results.
            </div>
+       </div>
+       <div class="stick">
        </div>
        <div class="rate-photos">
            <h1>Rate photos</h1>
@@ -35,5 +39,6 @@
            </div>
        </div>
    </div>
+
 </body>
 </html>
